Fix for Java 11 syntax
Signed-off-by: Tomoyuki Morita <moritato@amazon.com>